OffscreenWindow: disable updates

* Prevent Window::_SendUpdateMessage from sending messages to the
  client BWindow.  For an OffscreenWindow, the client BWindow will
  itself be offscreen so its message loop is never started.
* If an OffscreenWindow sends an _UPDATE_ message to its client and
  does not receive the expected reply, it will later refuse
  to draw to the area that was updated.  This can happen in the case
  of a BView that is a child of a BBitmap::fWindow.
* Fixes #9064.

Change-Id: I8ab840852f3875cb323842d927ee1e50b0aa3511